# openclaw-rs

./: Cargo.toml  Dockerfile  README.md  README.zh.md  docker-compose.yml
config/: config.example.json5
crates/openclaw-agent/: Cargo.toml
crates/openclaw-agent/src/: lib.rs  prompt.rs  runner.rs  session.rs  subagent.rs
crates/openclaw-agent/src/skills/: loader.rs  mod.rs  workspace.rs
crates/openclaw-agent/src/tools/: browser.rs  cron.rs  image.rs  memory.rs  mod.rs  web_fetch.rs  web_search.rs
crates/openclaw-channels/: Cargo.toml
crates/openclaw-channels/src/: discord.rs  irc.rs  lib.rs  matrix.rs  signal.rs  slack.rs  telegram.rs  whatsapp.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs
crates/openclaw-cli/src/commands/: agent.rs  config.rs  doctor.rs  gateway.rs  memory.rs  mod.rs  models.rs  sessions.rs  status.rs  tui.rs
crates/openclaw-cli/src/tui/: chat.rs
crates/openclaw-config/: Cargo.toml
crates/openclaw-config/src/: env_subst.rs  lib.rs  loader.rs  migration.rs  schema.rs  watcher.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: channel.rs  error.rs  lib.rs  message.rs  types.rs
crates/openclaw-gateway/: Cargo.toml
crates/openclaw-gateway/src/: auth.rs  lib.rs  server.rs  state.rs
crates/openclaw-gateway/src/routes/: control_ui.rs  health.rs  hooks.rs  mod.rs  openai_compat.rs  plugin_api.rs
crates/openclaw-gateway/src/ws/: connection.rs  methods.rs  mod.rs  protocol.rs
crates/openclaw-infra/: Cargo.toml
crates/openclaw-infra/src/: dotenv.rs  lib.rs  ports.rs  process.rs  update.rs
crates/openclaw-memory/: Cargo.toml
crates/openclaw-memory/src/: chunker.rs  lib.rs  manager.rs  search.rs  sqlite.rs
crates/openclaw-memory/src/embeddings/: gemini.rs  local.rs  mod.rs  openai.rs  voyage.rs
crates/openclaw-plugin-sdk/: Cargo.toml
crates/openclaw-plugin-sdk/src/: api.rs  lib.rs  traits.rs  types.rs
crates/openclaw-reply/: Cargo.toml
crates/openclaw-reply/src/: directive.rs  dispatcher.rs  lib.rs  media.rs  pipeline.rs  queue.rs
docs/: 01-PROJECT-OVERVIEW.md  02-AGENT-SYSTEM.md  03-GATEWAY-PROTOCOL.md  04-AUTO-REPLY-PIPELINE.md  05-LEARNING-GUIDE.md  AGENT_SYSTEM_DEEP_DIVE.md  REWRITE_TECHNICAL_SPEC.md
tests/integration/: config_test.rs  gateway_test.rs  memory_test.rs
