[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-config",
    "crates/openclaw-gateway",
    "crates/openclaw-agent",
    "crates/openclaw-reply",
    "crates/openclaw-memory",
    "crates/openclaw-plugin-sdk",
    "crates/openclaw-channels",
    "crates/openclaw-cli",
    "crates/openclaw-infra",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Config
dotenvy = "0.15"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Cron
tokio-cron-scheduler = "0.13"

# Template
minijinja = { version = "2", features = ["loader"] }

# Crypto / Auth
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Regex
regex = "1"

# Misc
bytes = "1"
pin-project-lite = "0.2"
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"
url = { version = "2", features = ["serde"] }
mime = "0.3"
tempfile = "3"
globset = "0.4"
walkdir = "2"

# Workspace crate dependencies
openclaw-core = { path = "crates/openclaw-core" }
openclaw-config = { path = "crates/openclaw-config" }
openclaw-gateway = { path = "crates/openclaw-gateway" }
openclaw-agent = { path = "crates/openclaw-agent" }
openclaw-reply = { path = "crates/openclaw-reply" }
openclaw-memory = { path = "crates/openclaw-memory" }
openclaw-plugin-sdk = { path = "crates/openclaw-plugin-sdk" }
openclaw-channels = { path = "crates/openclaw-channels" }
openclaw-infra = { path = "crates/openclaw-infra" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
