[package]
name = "openclaw-channels"
description = "Built-in channel implementations for OpenClaw (Telegram, Discord, Slack, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openclaw-core = { workspace = true }
openclaw-plugin-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
async-trait = "0.1"
