[package]
name = "openclaw-cli"
description = "CLI and TUI for OpenClaw AI gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
openclaw-core = { workspace = true }
openclaw-config = { workspace = true }
openclaw-gateway = { workspace = true }
openclaw-agent = { workspace = true }
openclaw-reply = { workspace = true }
openclaw-memory = { workspace = true }
openclaw-infra = { workspace = true }
openclaw-channels = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
