[package]
name = "openclaw-config"
description = "Configuration loading, validation, and hot-reload for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
dotenvy = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
parking_lot = { workspace = true }
