[package]
name = "openclaw-memory"
description = "Memory/RAG system with hybrid vector + full-text search for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openclaw-core = { workspace = true }
openclaw-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
walkdir = { workspace = true }
async-trait = "0.1"
