[package]
name = "openclaw-plugin-sdk"
description = "Plugin SDK for building OpenClaw channel extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openclaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
